# pythongently

./: README.md  pyproject.toml
src/ppeg/: __main__.py  exercise01.py  exercise02.py  exercise03.py  exercise04.py  exercise05.py  exercise06.py  exercise07.py  exercise08.py  exercise09.py  exercise10.py  exercise11.py  exercise12.py  exercise13.py  exercise14.py  exercise15.py  exercise16.py  exercise17.py  exercise18.py  exercise19.py  exercise20.py  exercise21.py  exercise22.py  exercise23.py  exercise24.py  exercise25.py  exercise26.py  exercise27.py  exercise28.py  exercise29.py  exercise30.py  exercise31.py  exercise32.py  exercise33.py  exercise34.py  exercise35.py  exercise36.py  exercise37.py  exercise38.py  exercise39.py  (+3 more)
tests/: exercise25.py  test_exercise01.py  test_exercise02.py  test_exercise03.py  test_exercise04.py  test_exercise05.py  test_exercise06.py  test_exercise07.py  test_exercise08.py  test_exercise09.py  test_exercise10.py  test_exercise11.py  test_exercise12.py  test_exercise13.py  test_exercise14.py  test_exercise15.py  test_exercise16.py  test_exercise17.py  test_exercise18.py  test_exercise19.py  test_exercise20.py  test_exercise21.py  test_exercise22.py  test_exercise23.py  test_exercise24.py  test_exercise25.py  test_exercise26.py  test_exercise27.py  test_exercise28.py  test_exercise29.py  test_exercise30.py  test_exercise31.py  test_exercise32.py  test_exercise33.py  test_exercise34.py  test_exercise35.py  test_exercise36.py  test_exercise37.py  test_exercise38.py  test_exercise39.py  (+3 more)
