[project]
name = "ppeg"
version = "0.1.0"
description = "This is my solutions for Python Programming Exercises, Gently Explained."
authors = [
    {name = "chenyulue", email = "chenyulue@163.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ppeg = "ppeg.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.4",
]
